--- a/Makefile.in
+++ b/Makefile.in
@@ -51,7 +51,7 @@ install: install-folders install-startup-script install-config install-sample-da
 	@echo
 	@echo "6.) Use 'make install-sample-certs' to install on-line docs."
 	@echo
-	@echo "Steps 1-6 can be done with 'make install-system' or 'make install-all'"
+	@echo "All of steps 1-6 can be done with 'make install-system' or 'make install-all'"
 	@echo
 	@echo "Use 'make intall-web-samples' to install sample web-pages."
 	@echo
@@ -114,10 +114,10 @@ install-startup-script:
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/init.d
 	@echo "- Installing startup script."
 	@if [ ! -e $(DESTDIR)/etc/init.d/vscpd ]; then\
+ 	    echo "- Copying startup script";\
 	    $(INSTALL_PROGRAM) -b -m755 install_files/unix/vscpd.startup_script_debian $(DESTDIR)/etc/init.d/vscpd;\
-#	    if [ ! -z "$DESTDIR" ]; then\
-#	        update-rc.d vscpd defaults;\
-#s	    fi;\
+	    echo "- Installing startup script";\
+	    update-rc.d vscpd defaults;\
 	fi
 
 install-config:
@@ -125,11 +125,11 @@ install-config:
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/vscp
 	$(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf
-#	@if [ ! -e $(DESTDIR)/etc/vscp/vscpd.conf ]; then\
-#	$(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf;\
-#	else\
-#	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
-#	fi
+	@if [ ! -e $(DESTDIR)/etc/vscp/vscpd.conf ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf;\
+	else\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
+	fi
 
 install-sample-data:
 	@echo "- Installing VSCP event database."
