Added disclean to make file

--- a/Makefile.in
+++ b/Makefile.in
@@ -210,6 +210,9 @@ delete-all:
 
 clean-conf: delete-all force-conf
 
+distclean:
+	@sh clean_for_dist
+
 deb:
 	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
 	echo "Building deb in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) deb ); done
