Restored start up script install for now

--- a/Makefile.in
+++ b/Makefile.in
@@ -94,6 +94,8 @@ install-folders:
 	$(INSTALL_PROGRAM) -d $(DESTDIR)@VSCPDIR@/scripts/lua
 	$(INSTALL_PROGRAM) -d $(DESTDIR)@VSCPDIR@/ux
 	$(INSTALL_PROGRAM) -d $(DESTDIR)@VSCPDIR@/web
+	$(INSTALL_PROGRAM) -d $(DESTDIR)@VSCPDIR@/web/js
+	$(INSTALL_PROGRAM) -d $(DESTDIR)@VSCPDIR@/web/service
 	$(INSTALL_PROGRAM) -d $(DESTDIR)@VSCPDIR@/certs
 	$(INSTALL_PROGRAM) -d $(DESTDIR)@VSCPDIR@/drivers
 	$(INSTALL_PROGRAM) -d $(DESTDIR)@VSCPDIR@/drivers/level1
