make clean is no longer removing Makefile (use make distclean)

--- a/src/vscp/drivers/level1/can232/linux/Makefile.in
+++ b/src/vscp/drivers/level1/can232/linux/Makefile.in
@@ -112,7 +112,6 @@ deb:    all
 	@mv *.deb ../../../../../../dist
 
 clean: 
-	rm -f Makefile
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
@@ -126,7 +125,7 @@ clean:
 	rm -f *.deb
 
 distclean: clean
-	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
+	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh 
 
 $(ALWAYS_BUILD):  .FORCE
 
