--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -1,12 +1,12 @@
 <?xml version = "1.0" encoding = "UTF-8" ?>
 
 <!--
-  2017-11-17
+  2018-08-22
   Example configuration file Unix
   Ake Hedman, akhe@grodansparadis.com
   http://www.grodansparadis.com
   Documentation for this configuration file is available
-  here http://www.vscp.org/docs/vscpd/doku.php?id=configuring_the_vscp_daemon
+  here https://grodansparadis.gitbooks.io/the-vscp-daemon/configuring_the_vscp_daemon.html
 
   All settings in this configuration file except enteries in the general section,
   can be done in the configuration database as well. This allows for easier
@@ -93,6 +93,7 @@
         "127.0.0.1:9598" only will listen on the specified interface.
         To specify several interfaces just enter them with a space
         between them.
+        Documented here https://grodansparadis.gitbooks.io/the-vscp-daemon/configuring_the_vscp_daemon.html#tcpip-client-interface
     -->
     <tcpip enable="true"
         interface="9598" />
@@ -119,6 +120,7 @@
       algorithm to use "AEA128", "AES192", "AES256"
       bBrodcast Set to true to set broadcast flag on socket.
       MG_F_ENABLE_BROADCAST
+      Documented here https://grodansparadis.gitbooks.io/the-vscp-daemon/configuring_the_vscp_daemon.html#udp-interface
     -->
     <udp enable="true"
             interface="udp://44444"
@@ -166,6 +168,7 @@
                 "AES192" and "AES256" are valid settings.
         bSendAck - if set to "true" ACK frams are sent when a
                     datagram is received.
+        Documented here https://grodansparadis.gitbooks.io/the-vscp-daemon/configuring_the_vscp_daemon.html#multicast-channel-interface            
     -->
     <multicast enable="true">
         <channel enable="true"
@@ -188,6 +191,7 @@
       Set to true to enable decision matrix
       Set to false to disable.
       Set path to the decision matrix file location
+      Documented here https://grodansparadis.gitbooks.io/the-vscp-daemon/files_and_directory_structure.html
     -->
     <dm enable="true"
           path="/srv/vscp/dm.xml"
@@ -197,6 +201,7 @@
       Set to true to enable daemon variables
       Set to false to disable.
       Path to variables storage.
+      Documented here https://grodansparadis.gitbooks.io/the-vscp-daemon/configuring_the_vscp_daemon.html#remote-variables
     -->
     <variables pathxml="/srv/vscp/variables.xml"
                 path="/srv/vscp/variables.sqlite3"
@@ -206,7 +211,7 @@
       Settings for the internal webserver.
 
       Documented here
-      http://www.vscp.org/docs/vscpd/doku.php?id=configuring_the_vscp_daemon#webserver
+      https://grodansparadis.gitbooks.io/the-vscp-daemon/configuring_the_vscp_daemon.html#webserver
     -->
 
     <webserver enable="true"
