--- a/Makefile.in
+++ b/Makefile.in
@@ -116,7 +116,7 @@ install-config:
 	@echo "- Installing main configuration file."
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/vscp
-	$(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf
+#	$(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf
 	@if [ ! -e $(DESTDIR)/etc/vscp/vscpd.conf ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf;\
 	else\
