Added "softopen" that open connection to can4vsp device again if it cycles power. That way holding it open.

--- a/src/vscp/drivers/level2/sim/linux/Makefile.in
+++ b/src/vscp/drivers/level2/sim/linux/Makefile.in
@@ -95,7 +95,7 @@ test:  test.o $(VSCPSIM_OBJECTS)
 vscpl2drv-sim.so: $(VSCPSIM_OBJECTS)
 	$(CXX) -o $@ $(VSCPSIM_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
 
-vscpl2drv/sim.o: vscpl2drv-sim.cpp vscpl2drv-sim.h
+vscpl2drv-sim.o: vscpl2drv-sim.cpp vscpl2drv-sim.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c vscpl2drv-sim.cpp -o $@
 
 simulation.o: ../common/simulation.cpp ../common/simulation.h
