--- a/src/vscp/drivers/level2/mqtt/linux/Makefile.in
+++ b/src/vscp/drivers/level2/mqtt/linux/Makefile.in
@@ -74,6 +74,7 @@ MQTT_OBJECTS = vscpl2drv_mqtt.o\
 	mqttobj.o\
 	vscpremotetcpif.o\
 	vscphelper.o\
+	sockettcp.o\
 	guid.o\
 	crc.o\
 	crc8.o\
@@ -105,6 +106,9 @@ vscpremotetcpif.o: ../../../../common/vscpremotetcpif.cpp ../../../../common/vsc
 vscphelper.o: ../../../../common/vscphelper.cpp ../../../../common/vscphelper.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/vscphelper.cpp -o $@
 
+sockettcp.o: ../../../../../common/sockettcp.c ../../../../../common/sockettcp.h
+	$(CC) $(CFLAGS) -c ../../../../../common/sockettcp.c -o $@
+	
 guid.o: ../../../../common/guid.cpp ../../../../common/guid.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/guid.cpp -o $@	
 	
