--- a/src/vscp/drivers/level2/rpilcd/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rpilcd/linux/Makefile.in
@@ -43,7 +43,7 @@ CXXFLAGS = -std=c++11 -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@ @WXBASE_CXXFLAGS
 CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I. -I../common -I../../../../common -I../../../../../common
 
 LDFLAGS = @LDFLAGS@
-EXTRALIBS = @EXTRALIBS@ -lwiringPi
+EXTRALIBS = -lpigpio @EXTRALIBS@ 
 ifeq ($(STATIC),yes)
 EXTRALIBS += @WXBASE_STATIC_LIBS@
 else
