Fixed bug in rpi driver install

--- a/src/vscp/drivers/level2/rpimax6675/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rpimax6675/linux/Makefile.in
@@ -138,7 +138,7 @@ dllist.o: ../../../../../common/dllist.c ../../../../../common/dllist.h
 
 install: all
 	mkdir -p $(VSCP_PROJ_BASE_DIR)/drivers/level2
-	$(INSTALL_PROGRAM) vscpl2drv-rpigpio.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
+	$(INSTALL_PROGRAM) vscpl2drv-rpimax6675.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
 
 uninstall: 
 
@@ -156,7 +156,7 @@ clean:
 	rm -f ../../../common/*.o
 	rm -f ../../../../common/*.o
 	rm -f ../../../../../common/*.o
-	rm -f vscpl2drv-rpigpio.so
+	rm -f vscpl2drv-rpimax6675.so
 	rm -f test
 	rm -f *.deb
 	rm -f *.gz
